<resources>
  <string name="app_name">Budget</string>
  <string name="page_title">Category</string>
  <string name="category_title">Groceries and Dining Out</string>
  <string name="button_label">Add a Transaction</string>
  <string name="text_box_label">Amount</string>
  <string name="text_box_label_2">Place</string>
  <string name="text_box_label_3">Notes</string>
  <string name="date">Date</string>

  <string-array name="months">
    <item>January</item>
    <item>February</item>
    <item>March</item>
    <item>April</item>
    <item>May</item>
    <item>June</item>
    <item>July</item>
    <item>August</item>
    <item>September</item>
    <item>October</item>
    <item>November</item>
    <item>December</item>
  </string-array>

  <!--<string-array name="categories">-->
  <!--<item>Groceries</item>-->
  <!--<item>Dining Out</item>-->
  <!--<item>Gas</item>-->
  <!--<item>Vehicle Payment</item>-->
  <!--<item>Entertainment</item>-->
  <!--<item>Mortgage/Rent</item>-->
  <!--<item>Phone</item>-->
  <!--<item>Utilities</item>-->
  <!--<item>Insurance</item>-->
  <!--<item>Credit Card</item>-->
  <!--<item>Cable</item>-->
  <!--<item>Internet</item>-->
  <!--<item>Personal Items</item>-->
  <!--</string-array>-->


  <string name="title_activity_settings">Settings</string>

  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">Recommendations for people to contact based
    on your message history
  </string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>

  <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
  <string-array name="pref_example_list_titles">
    <item>Always</item>
    <item>When possible</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_example_list_values">
    <item>1</item>
    <item>0</item>
    <item>-1</item>
  </string-array>

  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>

  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>

  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>

  <string-array name="multi_select_list_preference_default_value"/>

  <string name="pref_title_system_sync_settings">System sync settings</string>

  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
  <!--put list view as a string array-->