<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:style="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_margin="16dp"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    style="?android:listSeparatorTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/page_title"
    android:textSize="14dp"/>

  <TextView
    android:id="@+id/item_title_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/category_title"
    android:textSize="24dp"/>

  <EditText
    android:id="@+id/date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="14dp"
    android:paddingBottom="14dp"
    android:text="@string/date"
    android:onClick="showDatePickerDialog"
    android:focusable="false"/>

  <EditText
    android:id="@+id/text_box_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="34dp"
    android:paddingBottom="14dp"
    android:hint="@string/text_box_label"/>

  <EditText
    android:id="@+id/text_box_label_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:hint="@string/text_box_label_2"/>

  <EditText
    android:id="@+id/text_box_label_3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="74dp"
    android:paddingBottom="74dp"
    android:hint="@string/text_box_label_3"/>

  <!--<TextView-->
    <!--style="?android:listSeparatorTextViewStyle"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/item_details_label"/>-->

  <Button
    android:id="@+id/item_details_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_label"/>

</LinearLayout>